[ADD] hr_indonesia: purchase sequence number require department code
* cleanup demo data estate/hr_indonesia

--- a/hr_indonesia/views/hr_indonesia_view.xml
+++ b/hr_indonesia/views/hr_indonesia_view.xml
@@ -45,7 +45,18 @@
                 </xpath>
             </field>
         </record>
-
+        
+        <record id="view_department_form_inherited_hr_indonesia" model="ir.ui.view">
+            <field name="name">Department Tree</field>
+            <field name="model">hr.department</field>
+            <field name="inherit_id" ref="hr.view_department_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='name']" position="after">
+                    <field name="code"/>
+                </xpath>
+            </field>
+        </record>
+        
         <!-- Search View, requirement: search by NIK/ID -->
         <record id="inherited_hr_view_employee_filter" model="ir.ui.view">
             <field name="name">Employee Filter</field>
