--- a/purchase_indonesia/views/quotation_comparison.xml
+++ b/purchase_indonesia/views/quotation_comparison.xml
@@ -529,11 +529,11 @@
             parent="purchase.menu_procurement_management"
             action="base.action_partner_supplier_form" sequence="1"/>
 
-        <menuitem action="purchase.purchase_rfq" id="menu_purchase_rfq"
+        <menuitem action="purchase.purchase_rfq" id="purchase.menu_purchase_rfq"
             parent="purchase.menu_procurement_management"
             sequence="18"/>
 
-        <menuitem action="purchase.purchase_form_action" id="menu_purchase_form_action"
+        <menuitem action="purchase.purchase_form_action" id="purchase.menu_purchase_form_action"
                   parent="purchase.menu_procurement_management" sequence="20"/>
 
         <menuitem  id="purchase.menu_procurement_partner_contact_form"
