[ADD] purchase_indonesia : add bug workflow

--- a/purchase_indonesia/views/inherit_purchase_request.xml
+++ b/purchase_indonesia/views/inherit_purchase_request.xml
@@ -84,7 +84,8 @@
              <field name="inherit_id" ref="purchase_request.view_purchase_request_form"/>
              <field name="arch" type="xml">
                  <xpath expr="//field[@name='line_ids']//form//field[@name='analytic_account_id']" position="after">
-                          <field name="budget_available" string="Budget Available"/>
+                          <field name="budget_available" string="Budget Available"
+                                 />
                  </xpath>
              </field>
          </record>
@@ -97,7 +98,7 @@
              <field name="arch" type="xml">
                  <xpath expr="//button[@name='button_rejected']" position="replace">
                      <button name="%(action_purchase_request_reject)d"
-                             states="to_approve,approval1,approval2,technic1,technic2,technic3,technic4,technic5,budget" string="Reject Purchase Request" type="action"
+                             states="to_approve,approval1,approval2,technic1,technic2,technic3,technic4,technic5,budget,approval3,approval4,approval5,approval6" string="Reject Purchase Request" type="action"
                              groups="purchase_request.group_purchase_request_dept_head,
                              purchase_request.group_purchase_request_manager,
                              purchase_request.group_purchase_request_budget,
@@ -106,7 +107,7 @@
                              purchase_request.group_purchase_request_technical2,
                              purchase_request.group_purchase_request_technical3,
                              purchase_request.group_purchase_request_technical4,
-                             purchase_request.group_purchase_request_technical5
+                             purchase_request.group_purchase_request_technical5,
                              "/>
                  </xpath>
                  <xpath expr="//button[@name='button_to_approve']" position="replace">
@@ -134,6 +135,10 @@
                      <field name="state" widget="statusbar"
                            statusbar_visible="draft"
                            statusbar_colors='{"approved":"blue"}'/>
+                 </xpath>
+                 <xpath expr="//field[@name='assigned_to']" position="replace">
+                     <field name="assigned_to" attrs="{
+                     'invisible':[('state','=','draft')]}"/>
                  </xpath>
                  <xpath expr="//button[@name='button_draft']" position="after">
                      <button name="check_wkf_requester" states="draft"
@@ -175,8 +180,9 @@
                  </xpath>
                  <xpath expr="//field[@name='description']" position="after">
                      <group name="budget">
-                          <field name="type_budget" widget="radio" string="Budget"/>
-                          <field name="pta_code" string="PTA Reference" attrs="{'invisible': [('type_budget','!=', 'not')]}"/>
+                          <field name="type_budget" widget="radio" string="Budget" attrs="{'invisible': [('state','not in', ['budget','approval3','approval4','approval5','approval6'])]}"/>
+                          <field name="pta_code" string="PTA Reference"
+                                 attrs="{'invisible': [('type_budget','!=', 'not'),('state','not in', ['budget','approval3','approval4','approval5','approval6'])]}"/>
                           <field name="currency_id" invisible="1"/>
                      </group>
                  </xpath>
@@ -205,6 +211,25 @@
                  </xpath>
              </field>
          </record>
+
+        <record model="ir.actions.act_window" id="purchase_request.purchase_request_form_action">
+            <field name="name">Purchase Requests</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">purchase.request</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree,form</field>
+            <field name="search_view_id" ref="purchase_request.view_purchase_request_search"/>
+            <field name="context">{"search_default_assigned_approve":1}</field>
+            <field name="help" type="html">
+              <p class="oe_view_nocontent_create">
+                Click to start a new purchase request process.
+              </p><p>
+                A purchase request is an instruction to Purchasing to procure
+                a certain quantity of materials services, so that they are
+                available at a certain point in time.
+              </p>
+            </field>
+        </record>
 
         <record id="action_purchase_request_reject" model="ir.actions.act_window">
             <field name="name">Reject Purchase Request</field>
