--- a/hr_indonesia/views/hr_indonesia_view.xml
+++ b/hr_indonesia/views/hr_indonesia_view.xml
@@ -18,7 +18,7 @@
                 <xpath expr="//notebook" position="inside">
                     <page string="HR Indonesia" groups="base.group_hr_user">
                         <group>
-                            <group string="Employee Type" name="employee_type">
+                            <group string="Employee Information" name="employee_type">
                                 <field name="supervisor_level_id"/>
                                 <field name="company_id"/>
                                 <field name="contract_type"/>
@@ -26,6 +26,7 @@
                                 <field name="joindate"/>
                                 <field name="internship"/>
                                 <field name="outsource"/>
+                                <field name="office_level_id"/>
                             </group>
                             <group string="Identification" name="employee_id">
                                 <field name="nik_number"/>
@@ -135,6 +136,38 @@
             </field>
         </record>
 
+        <record id="office_view_tree" model="ir.ui.view">
+            <field name="name">Office Level Tree</field>
+            <field name="model">hr_indonesia.office</field>
+            <field name="priority" eval="1"/>
+            <field name="arch" type="xml">
+                <tree>
+                    <field name="name"/>
+                    <field name="code"/>
+                </tree>
+            </field>
+        </record>
+
+        <record id="office_view_form" model="ir.ui.view">
+            <field name="name">Office Level Form</field>
+            <field name="model">hr_indonesia.office</field>
+            <field name="priority" eval="1"/>
+            <field name="arch" type="xml">
+                <form>
+                    <group name="top">
+                        <group name="left">
+                            <field name="name"/>
+                            <field name="code"/>
+                        </group>
+                        <group name="right">
+                            <field name="sequence"/>
+                            <field name="comment"/>
+                        </group>
+                    </group>
+                </form>
+            </field>
+        </record>
+
         <!-- todo error while installed -->
         <!--
         <record id="action_work_schedule" model="ir.actions.act_window" >
@@ -169,6 +202,12 @@
             <field name="view_mode">tree,form</field>
         </record>
 
+        <record id="action_list_hr_office" model="ir.actions.act_window" >
+            <field name="name">Office Level</field>
+            <field name="res_model">hr_indonesia.office</field>
+            <field name="view_mode">tree,form</field>
+        </record>
+
         <menuitem id="menu_hr_indonesia_configuration_indonesia" name="Configuration ID" parent="hr.menu_hr_root"
                   sequence="110" groups="base.group_configuration,base.group_hr_manager"/>
         <menuitem id="menu_hr_indonesia_configuration_religion" name="Religion" parent="menu_hr_indonesia_configuration_indonesia"
@@ -180,8 +219,14 @@
         <menuitem id="menu_hr_indonesia_configuration_tax_marital" name="Tax Marital" parent="menu_hr_indonesia_configuration_indonesia"
                   action="action_list_hr_tax_marital"
                   sequence="30" groups="base.group_configuration,base.group_hr_manager"/>
-        <menuitem id="menu_hr_indonesia_configuration_location" name="Placement Location" parent="menu_hr_indonesia_configuration_indonesia"
+        <menuitem id="menu_hr_indonesia_configuration_location" name="Placement Location"
+                  parent="menu_hr_indonesia_configuration_indonesia"
                   action="action_list_hr_location"
                   sequence="30" groups="base.group_configuration,base.group_hr_manager"/>
+        <menuitem id="menu_hr_indonesia_configuration_office" name="Office Level"
+                  parent="menu_hr_indonesia_configuration_indonesia"
+                  action="action_list_hr_office"
+                  sequence="40"
+                  groups="base.group_configuration,base.group_hr_manager"/>
     </data>
 </openerp>
