--- a/purchase_indonesia/views/inherit_purchase_request.xml
+++ b/purchase_indonesia/views/inherit_purchase_request.xml
@@ -24,6 +24,7 @@
                           <field name="validation_user" invisible="1"/>
                           <field name="validation_reject" invisible="1"/>
                           <field name="validation_finance" invisible="1"/>
+                          <field name="validation_state_budget" invisible="1"/>
                           <field name="type_purchase" string="Purchase Type" options="{'no_create_edit': True}"/>
                  </xpath>
              </field>
@@ -63,7 +64,9 @@
                           <field name="total_price" invisible="0" string="Total Price"/>
                  </xpath>
                  <xpath expr="//field[@name='line_ids']//tree//field[@name='analytic_account_id']" position="after">
-                          <field name="budget_available" string="Budget Available"/>
+                     <field name="validation_budget" invisible="1"/>
+                     <field name="budget_available" string="Budget Available"
+                                 attrs="{'invisible': [('validation_budget','!=',True)]}"/>
                  </xpath>
              </field>
          </record>
@@ -87,8 +90,9 @@
              <field name="inherit_id" ref="purchase_request.view_purchase_request_form"/>
              <field name="arch" type="xml">
                  <xpath expr="//field[@name='line_ids']//form//field[@name='analytic_account_id']" position="after">
-                          <field name="budget_available" string="Budget Available"
-                                 />
+                     <field name="validation_budget" invisible="1"/>
+                     <field name="budget_available" string="Budget Available"
+                                 attrs="{'invisible': [('validation_budget','!=',True)]}"/>
                  </xpath>
              </field>
          </record>
@@ -137,6 +141,11 @@
                             type="object"
                             class="oe_highlight"
                             groups="purchase_request.group_purchase_request_manager"/>
+                 </xpath>
+
+                 <xpath expr="//field[@name='date_start']" position="replace">
+                    <field name="date_start" string="Request Date"
+                                    readonly="1" invisible="0"/>
                  </xpath>
 
                  <xpath expr="//field[@name='state']" position="replace">
