--- a/purchase_indonesia/views/inherit_purchase_tender.xml
+++ b/purchase_indonesia/views/inherit_purchase_tender.xml
@@ -25,9 +25,9 @@
              <field name="inherit_id" ref="purchase_requisition.view_purchase_requisition_form"/>
              <field name="arch" type="xml">
 
-                 <xpath expr="//header/button[@name='sent_suppliers']" position="before">
-                     <button name="print_purchase_request_tender" string="Print PR/PP" type="object"  groups="purchase_request.group_purchase_request_procstaff"/>
-                 </xpath>
+                 <!--<xpath expr="//header/button[@name='sent_suppliers']" position="before">-->
+                     <!--<button name="print_purchase_request_tender" string="Print PR/PP" type="object"  groups="purchase_request.group_purchase_request_procstaff"/>-->
+                 <!--</xpath>-->
 
                  <xpath expr="//h1/field[@name='name']" position="replace">
                            <field name="complete_name" class="oe_inline" invisible="0"
